RESOLVED FIXED33417
Cleanup: Fix style errors found by style bot in the patch for bug #33198
https://bugs.webkit.org/show_bug.cgi?id=33417
Summary Cleanup: Fix style errors found by style bot in the patch for bug #33198
Daniel Bates
Reported 2010-01-08 19:46:42 PST
Following up after the landing of bug #33198, we should fix all the style errors found by the style bot associated with this bug.
Attachments
Patch (10.55 KB, patch)
2010-01-08 19:50 PST, Daniel Bates
no flags
Daniel Bates
Comment 1 2010-01-08 19:50:33 PST
Adam Barth
Comment 2 2010-01-08 20:19:55 PST
Comment on attachment 46192 [details] Patch Dan Bates == epic win
Daniel Bates
Comment 3 2010-01-08 23:10:21 PST
Comment on attachment 46192 [details] Patch Clearing flags on attachment: 46192 Committed r53036: <http://trac.webkit.org/changeset/53036>
Daniel Bates
Comment 4 2010-01-08 23:10:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.