2010-01-08  Daniel Bates  <dbates@webkit.org>

Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=33417

        Cleans up style errors exposed by the patch for bug #33198.
        Moreover, fixes all "Weird number of spaces at line-start. Are you using a 4-space indent?"
        errors reported by check-webkit-style.

        No functionality was changed. So, no new tests.

        * wtf/Platform.h:
2010-01-08  Daniel Bates  <dbates@webkit.org>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=33417

        Cleans up style errors exposed by the patch for bug #33198.

        No functionality was changed. So, no new tests.

        * src/GraphicsContext3D.cpp:
2010-01-08  Daniel Bates  <dbates@webkit.org>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=33417

        Cleans up style errors exposed by the patch for bug #33198.

        No functionality was changed. So, no new tests.

        * platform/graphics/SimpleFontData.h:
        * plugins/PluginPackage.cpp:


Canonical link: https://commits.webkit.org/44444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53036 268f45cc-cd09-0410-ab3c-d52691b4dbfc