WebCore/plugins/PluginPackage.cpp
@@ -126,7 +126,7 @@ void PluginPackage::unload()
 
     unloadWithoutShutdown();
 }
-#endif //!OS(SYMBIAN)
+#endif // !OS(SYMBIAN)
 
 void PluginPackage::unloadWithoutShutdown()
 {
